Internationalisation (A.K.A. Multi-Language) (#170)
* Load & Get Messages.

* Update build.gradle

* Config.json integration.

* Added translations.

* Fixing NPE on DefaultAOAssetManager

* Creating bundle

* Set messages enum.

* Dynamic locale setting.

* refactor notifiers.

* Send message ID's to the client.

* Delete redundant class.

* More message ID's to send.

* Fix

* Fix return

* Fixed client-side messages retrieval.

* Little fix.

* Finished.

* Optimized imports and rearranged entries.

* Added new messages & new global function to get asset manager globally.

* Major fixes.

* Finished fixing. Replaced Object[] with String[]

* Screenshot message translation.

* Optimized imports, cleaned up code & rearranged entries.

* Fixed screenshot message.

* Fix warning.

* Fix design.